# crypto-exchange-simulator

./: README.md  pyproject.toml
docs/: CLIENT_NETWORK_MANAGEMENT.md  QUICKSTART.md  REST_API.md
examples/: README.md  client.py  config.json  example_client.py  run_server.py  simple_client.py
src/: __init__.py
src/client/: __init__.py  client.py  config.py  dashboard.py
src/client/network/: __init__.py  heartbeat.py  network_manager.py  rate_limiter.py  reconciler.py  sequence_tracker.py
src/exchange_simulator/: config.json  config.py  connection_manager.py  failure_injector.py  message_router.py  rest_api.py  server.py
src/exchange_simulator/engine/: accounts.py  exchange.py  orderbook.py
src/exchange_simulator/failures/: strategies.py
src/exchange_simulator/handlers/: base.py  heartbeat.py  order.py  subscription.py
src/exchange_simulator/market_data/: __init__.py  generator.py
src/exchange_simulator/models/: messages.py  orders.py
tests/: conftest.py
tests/unit/: test_connection_manager.py  test_exchange_engine.py  test_failure_injector.py  test_failure_strategies.py  test_heartbeat.py  test_heartbeat_silent_connection.py  test_message_router.py  test_messages.py  test_orders.py  test_pricing_models.py  test_rate_limiting.py  test_rest_api.py  test_silent_connection.py
